@@ -4,6 +4,8 @@ o FIX: named community memberships in `itemStability` and `dimStability`
 
 o UPDATE: `plot`, `print`, and `summary` methods all moved into single .R files (no effect on user's end)
 
+o UPDATE: `net.scores` global score is improved and computes scores very close to CFA scores
+
 
 Changes in version 0.9.4
 
